packages/httl-core/src/parser/antlr/HttlParser.ts
// Generated from HttlParser.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import HttlParserListener from "./HttlParserListener.js";
import HttlParserVisitor from "./HttlParserVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

import HttlParserBase from './HttlParserBase.js';

export default class HttlParser extends HttlParserBase {
	public static readonly USE = 1;
	public static readonly AS = 2;
	public static readonly ASSERT = 3;
	public static readonly JSON_BODY = 4;
	public static readonly FORM_BODY = 5;
	public static readonly URL_ENCODED_BODY = 6;
	public static readonly BINARY_BODY = 7;
	public static readonly RAW_BODY = 8;
	public static readonly GET = 9;
	public static readonly POST = 10;
	public static readonly PUT = 11;
	public static readonly DELETE = 12;
	public static readonly PATCH = 13;
	public static readonly HEAD = 14;
	public static readonly OPTIONS = 15;
	public static readonly CONNECT = 16;
	public static readonly TRACE = 17;
	public static readonly LOCK = 18;
	public static readonly UNLOCK = 19;
	public static readonly PROPFIND = 20;
	public static readonly PROPPATCH = 21;
	public static readonly COPY = 22;
	public static readonly MOVE = 23;
	public static readonly MKCOL = 24;
	public static readonly MKCALENDAR = 25;
	public static readonly ACL = 26;
	public static readonly SEARCH = 27;
	public static readonly VAR_TEST = 28;
	public static readonly STRING_START = 29;
	public static readonly REQEST_START = 30;
	public static readonly EXT_HTTP_HEADER_NAME = 31;
	public static readonly HTTP_HEADER_NAME = 32;
	public static readonly IDENTIFIER = 33;
	public static readonly DIGITS = 34;
	public static readonly CRLF = 35;
	public static readonly COMMENT = 36;
	public static readonly WS = 37;
	public static readonly JSON_OBJECT_START = 38;
	public static readonly JSON_OBJECT_END = 39;
	public static readonly JSON_ARRAY_START = 40;
	public static readonly JSON_ARRAY_END = 41;
	public static readonly ERROR = 42;
	public static readonly VAR_INTERPOLATION_START = 43;
	public static readonly STRING_END = 44;
	public static readonly STRING_CONTENT = 45;
	public static readonly VAR_INTERPOLATION_END = 46;
	public static readonly VAR_EXPR = 47;
	public static readonly END_OF_REQEST_URL = 48;
	public static readonly END_OF_REQEST_URL_NL = 49;
	public static readonly REQEST_URL = 50;
	public static readonly END_OF_LINE = 51;
	public static readonly LINE_CONTENT = 52;
	public static readonly JSON_COMMA = 53;
	public static readonly JSON_SEMI = 54;
	public static readonly JSON_LITERAL = 55;
	public static readonly JSON_NUMBER = 56;
	public static readonly JSON_NUMERIC_LITERAL = 57;
	public static readonly JSON_SYMBOL = 58;
	public static readonly JSON_IDENTIFIER = 59;
	public static readonly JSON_VAR_IDENTIFIER = 60;
	public static readonly JSON_WS = 61;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_program = 0;
	public static readonly RULE_expr = 1;
	public static readonly RULE_use = 2;
	public static readonly RULE_apiPath = 3;
	public static readonly RULE_apiAlias = 4;
	public static readonly RULE_request = 5;
	public static readonly RULE_requestMethod = 6;
	public static readonly RULE_requestUrl = 7;
	public static readonly RULE_requestHeader = 8;
	public static readonly RULE_requestBody = 9;
	public static readonly RULE_formBody = 10;
	public static readonly RULE_urlEncodedBody = 11;
	public static readonly RULE_jsonBody = 12;
	public static readonly RULE_binBody = 13;
	public static readonly RULE_rawBody = 14;
	public static readonly RULE_requestVar = 15;
	public static readonly RULE_requestAssert = 16;
	public static readonly RULE_apiHeader = 17;
	public static readonly RULE_httpHeader = 18;
	public static readonly RULE_httpHeaderName = 19;
	public static readonly RULE_httpHeaderValue = 20;
	public static readonly RULE_httpHeaderValuePart = 21;
	public static readonly RULE_string = 22;
	public static readonly RULE_stringPart = 23;
	public static readonly RULE_var = 24;
	public static readonly RULE_jsonAssertion = 25;
	public static readonly RULE_json = 26;
	public static readonly RULE_json_object = 27;
	public static readonly RULE_json_pair = 28;
	public static readonly RULE_json_key = 29;
	public static readonly RULE_json_value = 30;
	public static readonly RULE_json_array = 31;
	public static readonly RULE_json_number = 32;
	public static readonly literalNames: (string | null)[] = [ null, "'use'", 
                                                            "'as'", "'assert'", 
                                                            "'json'", "'formdata'", 
                                                            "'urlencoded'", 
                                                            "'bin'", "'raw'", 
                                                            "'get'", "'post'", 
                                                            "'put'", "'delete'", 
                                                            "'patch'", "'head'", 
                                                            "'options'", 
                                                            "'connect'", 
                                                            "'trace'", "'lock'", 
                                                            "'unlock'", 
                                                            "'propfind'", 
                                                            "'proppatch'", 
                                                            "'copy'", "'move'", 
                                                            "'mkcol'", "'mkcalendar'", 
                                                            "'acl'", "'search'", 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            "'['", null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, "','", 
                                                            "':'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "USE", 
                                                             "AS", "ASSERT", 
                                                             "JSON_BODY", 
                                                             "FORM_BODY", 
                                                             "URL_ENCODED_BODY", 
                                                             "BINARY_BODY", 
                                                             "RAW_BODY", 
                                                             "GET", "POST", 
                                                             "PUT", "DELETE", 
                                                             "PATCH", "HEAD", 
                                                             "OPTIONS", 
                                                             "CONNECT", 
                                                             "TRACE", "LOCK", 
                                                             "UNLOCK", "PROPFIND", 
                                                             "PROPPATCH", 
                                                             "COPY", "MOVE", 
                                                             "MKCOL", "MKCALENDAR", 
                                                             "ACL", "SEARCH", 
                                                             "VAR_TEST", 
                                                             "STRING_START", 
                                                             "REQEST_START", 
                                                             "EXT_HTTP_HEADER_NAME", 
                                                             "HTTP_HEADER_NAME", 
                                                             "IDENTIFIER", 
                                                             "DIGITS", "CRLF", 
                                                             "COMMENT", 
                                                             "WS", "JSON_OBJECT_START", 
                                                             "JSON_OBJECT_END", 
                                                             "JSON_ARRAY_START", 
                                                             "JSON_ARRAY_END", 
                                                             "ERROR", "VAR_INTERPOLATION_START", 
                                                             "STRING_END", 
                                                             "STRING_CONTENT", 
                                                             "VAR_INTERPOLATION_END", 
                                                             "VAR_EXPR", 
                                                             "END_OF_REQEST_URL", 
                                                             "END_OF_REQEST_URL_NL", 
                                                             "REQEST_URL", 
                                                             "END_OF_LINE", 
                                                             "LINE_CONTENT", 
                                                             "JSON_COMMA", 
                                                             "JSON_SEMI", 
                                                             "JSON_LITERAL", 
                                                             "JSON_NUMBER", 
                                                             "JSON_NUMERIC_LITERAL", 
                                                             "JSON_SYMBOL", 
                                                             "JSON_IDENTIFIER", 
                                                             "JSON_VAR_IDENTIFIER", 
                                                             "JSON_WS" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "expr", "use", "apiPath", "apiAlias", "request", "requestMethod", 
		"requestUrl", "requestHeader", "requestBody", "formBody", "urlEncodedBody", 
		"jsonBody", "binBody", "rawBody", "requestVar", "requestAssert", "apiHeader", 
		"httpHeader", "httpHeaderName", "httpHeaderValue", "httpHeaderValuePart", 
		"string", "stringPart", "var", "jsonAssertion", "json", "json_object", 
		"json_pair", "json_key", "json_value", "json_array", "json_number",
	];
	public get grammarFileName(): string { return "HttlParser.g4"; }
	public get literalNames(): (string | null)[] { return HttlParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return HttlParser.symbolicNames; }
	public get ruleNames(): string[] { return HttlParser.ruleNames; }
	public get serializedATN(): number[] { return HttlParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, HttlParser._ATN, HttlParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let localctx: ProgramContext = new ProgramContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, HttlParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 69;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 1)) & ~0x1F) === 0 && ((1 << (_la - 1)) & 3758096385) !== 0)) {
				{
				{
				this.state = 66;
				this.expr();
				}
				}
				this.state = 71;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 72;
			this.match(HttlParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public expr(): ExprContext {
		let localctx: ExprContext = new ExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, HttlParser.RULE_expr);
		try {
			this.state = 77;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 74;
				this.use();
				}
				break;
			case 30:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 75;
				this.request();
				}
				break;
			case 31:
			case 32:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 76;
				this.apiHeader();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public use(): UseContext {
		let localctx: UseContext = new UseContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, HttlParser.RULE_use);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 79;
			this.match(HttlParser.USE);
			this.state = 80;
			this.apiPath();
			this.state = 83;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===2) {
				{
				this.state = 81;
				this.match(HttlParser.AS);
				this.state = 82;
				this.apiAlias();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public apiPath(): ApiPathContext {
		let localctx: ApiPathContext = new ApiPathContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, HttlParser.RULE_apiPath);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 85;
			this.string_();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public apiAlias(): ApiAliasContext {
		let localctx: ApiAliasContext = new ApiAliasContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, HttlParser.RULE_apiAlias);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 87;
			this.match(HttlParser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public request(): RequestContext {
		let localctx: RequestContext = new RequestContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, HttlParser.RULE_request);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 89;
			this.requestMethod();
			this.state = 90;
			this.requestUrl();
			this.state = 94;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 3, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 91;
					this.requestHeader();
					}
					}
				}
				this.state = 96;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 3, this._ctx);
			}
			this.state = 98;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 496) !== 0) || _la===38 || _la===40) {
				{
				this.state = 97;
				this.requestBody();
				}
			}

			this.state = 114;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 2:
				{
				{
				{
				this.state = 100;
				this.match(HttlParser.AS);
				this.state = 101;
				this.requestVar();
				}
				this.state = 105;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===3) {
					{
					this.state = 103;
					this.match(HttlParser.ASSERT);
					this.state = 104;
					this.requestAssert();
					}
				}

				}
				}
				break;
			case 3:
				{
				{
				{
				this.state = 107;
				this.match(HttlParser.ASSERT);
				this.state = 108;
				this.requestAssert();
				}
				this.state = 112;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===2) {
					{
					this.state = 110;
					this.match(HttlParser.AS);
					this.state = 111;
					this.requestVar();
					}
				}

				}
				}
				break;
			case -1:
			case 1:
			case 30:
			case 31:
			case 32:
				break;
			default:
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public requestMethod(): RequestMethodContext {
		let localctx: RequestMethodContext = new RequestMethodContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, HttlParser.RULE_requestMethod);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 116;
			this.match(HttlParser.REQEST_START);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public requestUrl(): RequestUrlContext {
		let localctx: RequestUrlContext = new RequestUrlContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, HttlParser.RULE_requestUrl);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 119;
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					this.state = 118;
					this.stringPart();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 121;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 8, this._ctx);
			} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public requestHeader(): RequestHeaderContext {
		let localctx: RequestHeaderContext = new RequestHeaderContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, HttlParser.RULE_requestHeader);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 123;
			if (!(this.hasNoBreaks())) {
				throw this.createFailedPredicateException("this.hasNoBreaks()");
			}
			this.state = 124;
			this.httpHeader();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public requestBody(): RequestBodyContext {
		let localctx: RequestBodyContext = new RequestBodyContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, HttlParser.RULE_requestBody);
		try {
			this.state = 131;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 5:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 126;
				this.formBody();
				}
				break;
			case 6:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 127;
				this.urlEncodedBody();
				}
				break;
			case 4:
			case 38:
			case 40:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 128;
				this.jsonBody();
				}
				break;
			case 7:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 129;
				this.binBody();
				}
				break;
			case 8:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 130;
				this.rawBody();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public formBody(): FormBodyContext {
		let localctx: FormBodyContext = new FormBodyContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, HttlParser.RULE_formBody);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 133;
			this.match(HttlParser.FORM_BODY);
			this.state = 134;
			this.json();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public urlEncodedBody(): UrlEncodedBodyContext {
		let localctx: UrlEncodedBodyContext = new UrlEncodedBodyContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, HttlParser.RULE_urlEncodedBody);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 136;
			this.match(HttlParser.URL_ENCODED_BODY);
			this.state = 137;
			this.json();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public jsonBody(): JsonBodyContext {
		let localctx: JsonBodyContext = new JsonBodyContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, HttlParser.RULE_jsonBody);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 140;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===4) {
				{
				this.state = 139;
				this.match(HttlParser.JSON_BODY);
				}
			}

			this.state = 142;
			this.json();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public binBody(): BinBodyContext {
		let localctx: BinBodyContext = new BinBodyContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, HttlParser.RULE_binBody);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 144;
			this.match(HttlParser.BINARY_BODY);
			this.state = 145;
			this.string_();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public rawBody(): RawBodyContext {
		let localctx: RawBodyContext = new RawBodyContext(this, this._ctx, this.state);
		this.enterRule(localctx, 28, HttlParser.RULE_rawBody);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 147;
			this.match(HttlParser.RAW_BODY);
			this.state = 148;
			this.string_();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public requestVar(): RequestVarContext {
		let localctx: RequestVarContext = new RequestVarContext(this, this._ctx, this.state);
		this.enterRule(localctx, 30, HttlParser.RULE_requestVar);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 150;
			this.match(HttlParser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public requestAssert(): RequestAssertContext {
		let localctx: RequestAssertContext = new RequestAssertContext(this, this._ctx, this.state);
		this.enterRule(localctx, 32, HttlParser.RULE_requestAssert);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 152;
			this.jsonAssertion();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public apiHeader(): ApiHeaderContext {
		let localctx: ApiHeaderContext = new ApiHeaderContext(this, this._ctx, this.state);
		this.enterRule(localctx, 34, HttlParser.RULE_apiHeader);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 154;
			this.httpHeader();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public httpHeader(): HttpHeaderContext {
		let localctx: HttpHeaderContext = new HttpHeaderContext(this, this._ctx, this.state);
		this.enterRule(localctx, 36, HttlParser.RULE_httpHeader);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 156;
			this.httpHeaderName();
			this.state = 157;
			this.httpHeaderValue();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public httpHeaderName(): HttpHeaderNameContext {
		let localctx: HttpHeaderNameContext = new HttpHeaderNameContext(this, this._ctx, this.state);
		this.enterRule(localctx, 38, HttlParser.RULE_httpHeaderName);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 159;
			_la = this._input.LA(1);
			if(!(_la===31 || _la===32)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public httpHeaderValue(): HttpHeaderValueContext {
		let localctx: HttpHeaderValueContext = new HttpHeaderValueContext(this, this._ctx, this.state);
		this.enterRule(localctx, 40, HttlParser.RULE_httpHeaderValue);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 162;
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					this.state = 161;
					this.httpHeaderValuePart();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 164;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 11, this._ctx);
			} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public httpHeaderValuePart(): HttpHeaderValuePartContext {
		let localctx: HttpHeaderValuePartContext = new HttpHeaderValuePartContext(this, this._ctx, this.state);
		this.enterRule(localctx, 42, HttlParser.RULE_httpHeaderValuePart);
		try {
			this.state = 169;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 52:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 166;
				this.match(HttlParser.LINE_CONTENT);
				}
				break;
			case 29:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 167;
				this.string_();
				}
				break;
			case 43:
			case 59:
			case 60:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 168;
				this.var_();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public string_(): StringContext {
		let localctx: StringContext = new StringContext(this, this._ctx, this.state);
		this.enterRule(localctx, 44, HttlParser.RULE_string);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 171;
			this.match(HttlParser.STRING_START);
			this.state = 173;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 172;
				this.stringPart();
				}
				}
				this.state = 175;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (((((_la - 43)) & ~0x1F) === 0 && ((1 << (_la - 43)) & 197253) !== 0));
			this.state = 177;
			this.match(HttlParser.STRING_END);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
